--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -1,2 +1,5 @@
-
+employee.created=employé a été créé avec succès.
+employee.updated=employé a été mis à jour avec succès.
+employee.deleted=employé a été supprimé avec succès.
+employee.notfound=employé introuvable.
 
