Internationalisation des messages.

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,4 +1,5 @@
-employee.created=Employee has been created successfully.
+employee.created=Employee is well added.
 employee.notfound=Employee not found.
-employee.updated=Employee has been Updated successfully.
+employee.updated=Employee has been  successfully.
 employee.deleted=Employee has been deleted successfully.
+email.inuse=Email already in use.
