--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -1,5 +1,7 @@
-employee.created=employé a été créé avec succès.
-employee.updated=employé a été mis à jour avec succès.
-employee.deleted=employé a été supprimé avec succès.
-employee.notfound=employé introuvable.
+employee.created=Employé a été bien ajouté.
+employee.updated=Employé a été mis à jour avec succès.
+employee.deleted=Employé a été supprimé avec succès.
+employee.notfound=Employé introuvable.
+email.inuse=Email déja utilisé.
+
 
